[package]
name = "crates-pm"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sycertech/crates.pm"
authors = ["Carter Himmel <carter@sycer.tech>"]
homepage = "https://crates.pm"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.18"
console_error_panic_hook =  "0.1"

[profile.release]
opt-level = "s"
